app/assets/stylesheets/items.scss
.filter-with-item-wrapper {
  display: flex;
  gap: 1rem;

  width: calc(min(90%, 100rem));
  margin: 1rem auto;

  .filter-wrapper {
    width: 20%;
    border-radius: 1rem;
    padding: 1rem;
    background-color: var(--surface-at-1);
    border: 1px solid var(--outline-variant);
    height: fit-content;

    @media (max-width: 768px) {
      display: none;
    }
  }

  .item-wrapper {
    width: 80%;
    display: flex;
    flex-direction: column;
    gap: 1rem;

    .item {
      display: flex;
      flex-direction: column;
      padding: 1rem;
      border-radius: 1rem;
      background-color: var(--surface-at-1);
      border: 1px solid var(--outline-variant);

      h3 {
        color: var(--primary);
        font-size: 1.1rem;
        font-weight: 500;
      }
    }
  }
}

